# behavior-logical-language

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README_tools.md  brainll_docgen.cpp  brainll_validator.cpp  install_tools.bat.in  test_modular_separation.py  test_simd_optimizations.cpp  test_weight_diversity.py  validator_config.ini
AGI/: AdvancedLanguageProcessor.cpp  AdvancedMetaLearning.cpp  AdvancedNeuralNetwork.cpp  AdvancedNeuralNetwork.hpp  AdvancedNeuronModels.cpp  AdvancedRegularization.cpp  AttentionMechanism.cpp  AutoMLManager.cpp  CMakeLists.txt  EnhancedModelPersistence.cpp  LearningEngine.cpp  LearningProtocols.cpp  brainll_agi_config.cmake.in
AGI/Reorganization/AdvancedLanguageProcessor/: AdvancedLanguageProcessor.md
AGI/Reorganization/AdvancedMetaLearning/: AdvancedMetaLearning.md
AGI/Reorganization/AdvancedNeuralNetwork/: AdvancedNeuralNetwork.md
AGI/Reorganization/AdvancedNeuralNetwork/Core/: NetworkCore.cpp  NetworkCore.hpp
AGI/Reorganization/AdvancedNeuralNetwork/NeuronModels/: AdaptiveLIFModel.cpp  AdaptiveLIFModel.hpp  IzhikevichModel.cpp  IzhikevichModel.hpp  LIFModel.cpp  LIFModel.hpp  RecurrentModels.cpp  RecurrentModels.hpp
AGI/Reorganization/AdvancedNeuralNetwork/Persistence/: NetworkPersistence.cpp  NetworkPersistence.hpp
AGI/Reorganization/AdvancedNeuralNetwork/Plasticity/: HomeostasisRule.cpp  HomeostasisRule.hpp  STDP.cpp  STDP.hpp
AGI/Reorganization/AdvancedNeuralNetwork/Simulation/: NetworkSimulator.cpp  NetworkSimulator.hpp  NetworkVisualizer.cpp  NetworkVisualizer.hpp
BIO/: AdvancedNeuron.cpp  AdvancedNeuron.hpp  AdvancedNeuronIntegration.cpp  CMakeLists.txt  NeurotransmitterSystem.cpp  PlasticityEngine.cpp  PlasticityManager.cpp  PlasticityRules.cpp  brainll_bio_config.cmake.in
BIO/neurons/: AdaptiveLIFNeuron.cpp  AdaptiveLIFNeuron.hpp  AdaptiveNeuron.cpp  AdaptiveNeuron.hpp  AdvancedNeuronAdapter.cpp  AdvancedNeuronAdapter.hpp  AttentionNeuron.cpp  AttentionNeuron.hpp  CNNNeuron.cpp  CNNNeuron.hpp  GRUNeuron.cpp  GRUNeuron.hpp  HodgkinHuxleyNeuron.cpp  HodgkinHuxleyNeuron.hpp  IzhikevichNeuron.cpp  IzhikevichNeuron.hpp  LIFNeuron.cpp  LIFNeuron.hpp  LSTMNeuron.cpp  LSTMNeuron.hpp  NeuronBase.cpp  NeuronBase.hpp  NeuronFactory.cpp  NeuronFactory.hpp  README.md  TransformerNeuron.cpp  TransformerNeuron.hpp  example_migration.cpp  test_CMakeLists.txt  test_modular_neurons.cpp
core/: AdvancedConnection.cpp  Connection.cpp  ConnectionPool.cpp  DynamicNetwork.cpp  EnhancedBrainLLParser.cpp  Neuron.cpp  SyntaxValidator.cpp  UnifiedModelPersistence.cpp  main.cpp
docs/: BrainLL_Syntax_Reference.md  CudaKernels_Documentation.md  Debug_System_Guide.md  Limitaciones_Identificadas.md  modular_neuron_system_changes.md  realism_parameters_guide.md  text_dataset_processing_guide.md
docs/docs_test/: Analisis_Realismo_Biologico_BrainLL.md  BrainLL_Roadmap_Consolidado.md  BrainLL_Sintaxis_Completa.md  DOCUMENTACION_INDICE.md  MODULAR_ARCHITECTURE.md  advanced_ai_systems.md  hallazgos_tecnicos_rendimiento.md  implementacion_parametros_realismo_completa.md  resumen_ejecutivo_cambios.md
docs/docs_test/doc/: Guia_Neural_Debugger.md  Guia_Visualizacion_3D.md  doc.md
docs/docs_test/no_use/: BrainLLParser.cpp  G1Neuron.cpp  G2Neuron.cpp  G3Neuron.cpp
docs/docs_test/old/: BrainLL_Language_Syntax_Documentation.md  BrainLL_Mejoras_Propuestas_y_Roadmap.md  BrainLL_Sintaxis_Completa.md  ENHANCED_BRAINLL_README.md  Enhanced_Parser_Features.md  advanced_configuration_guide.md  enhanced_training_and_model_loading.md  new_funs.md
examples/: correct_advanced_network.bll  debug_example.bll  enhanced_cognitive_network.bll  optimized_network.bll  scaled_network.bll  simd_optimization_example.bll  stdp_config.bll  syntax_flexibility_demo.bll
examples/examples_faileds/: cnn_image_classifier.bll  computer_vision_system.bll  financial_time_series.bll  modular_neuron_showcase.bll  nlp_transformer_system.bll  reinforcement_learning_agent.bll  rnn_sequence_processor.bll  robotics_control_system.bll  simple_neural_network.bll
examples/record/: correct_advanced_network_simplified.bll  enhanced_cognitive_network.bll  optimized_network.bll  optimized_network.txt  scaled_network.bll
include/: AdvancedConfigurationManager.hpp  AdvancedConnection.hpp  AdvancedLanguageProcessor.hpp  AdvancedMetaLearning.hpp  AdvancedNeuralNetwork.hpp  AdvancedNeuron.hpp  AdvancedNeuronIntegration.hpp  AdvancedNeuronModels.hpp  AdvancedRegularization.hpp  AttentionMechanism.hpp  BrainLLConfig.hpp  BrainLLParser.hpp  Connection.hpp  ConnectionPool.hpp  ContinualLearning.hpp  CudaKernels.hpp  DebugConfig.hpp  DistributedCommunication.hpp  DocumentationGenerator.hpp  DynamicNetwork.hpp  EnhancedBrainLLParser.hpp  EnhancedModelPersistence.hpp  LearningEngine.hpp  LearningProtocols.hpp  MemoryPool.hpp  MemorySystem.hpp  MonitoringSystem.hpp  Neuron.hpp  NeurotransmitterSystem.hpp  OptimizationEngine.hpp  ParallelSimulation.hpp  PerformanceAnalyzer.hpp  PerformanceOptimizer.hpp  PlasticityEngine.hpp  PlasticityManager.hpp  SparseConnectionMatrix.hpp  StateMachine.hpp  SyntaxValidator.hpp  UnifiedModelPersistence.hpp  VisualizationEngine.hpp
neural-debugger/: index.html  sample_network.json  styles.css
neural-debugger/js/: activity-plotter.js  main.js  network-parser.js  network-visualization.js  renderer-3d.js
optimization/: BenchmarkSuite.cpp  CMakeLists.txt  CudaKernels.cu  DistributedCommunication.cpp  HyperOptimizer.cpp  HyperOptimizer.hpp  OptimizationEngine.cpp  ParallelSimulation.cpp  PerformanceOptimizer.cpp  SIMDOptimizer.cpp  SIMDOptimizer.hpp  SIMDOptimizer_test.cpp  hyper_optimizer_test.cpp  simd_benchmark.cpp
utils/: ContinualLearning.cpp  DeploymentTools.cpp  DocumentationGenerator.cpp  MemorySystem.cpp  MonitoringSystem.cpp  StateMachine.cpp  VisualizationSystem.cpp  VisualizationSystem.hpp  bindings.cpp
vscode-extension/: README.md  language-configuration.json  package.json  tsconfig.json
vscode-extension/snippets/: brainll.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: brainll.tmLanguage.json
